# ci-minimal

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  main  main.cc
.github/workflows/: cmake.yml
include/common/: CMakeLists.txt  algorithm.cc
include/common/include/common/: algorithm.h
include/matlab/: CMakeLists.txt  matlab.cc  matlab.h
include/util/: CMakeLists.txt  matlab.cc
include/util/include/matlab/: matlab.h
stringutil/: CMakeLists.txt  stringutil.cc  stringutil.h  stringutiltest.cc
tests/gtests/: CMakeLists.txt  common_test.cc  stringutil_test.cc
